<resources>
    <string name="app_name">outn</string>
    <string name="hint_search">search in country and city and area</string>
    <string name="sale">Sale</string>
    <string name="rent">Rent</string>
    <string name="login">Login</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>

    <string name="creat_account">Creat Account</string>


    <string name="name">Name</string>
    <string name="mobile">Mobile</string>
    <string name="address">Address</string>
    <string name="country">Country</string>
    <string name="city">City</string>
    <string name="email">Email</string>
    <string name="countinue">countinue</string>
    <string name="optional">Email(Optional)</string>
    <string name="not_empty">Should not be empty</string>
    ِ
    <string name="help">Help</string>
    <string name="rejester">Rejester</string>
    ِ
    <string name="try_agin">try agin</string>
    <string name="pls_wait">Please wait...</string>


    <string name="details">Details</string>
    <string name="pictures">Pictures</string>
    <string name="save">Save</string>

    <string name="more">more…</string>
    <string name="send_link">Send Link</string>
    <string name="sign_out">Sign Out</string>
    <string name="verify_email">Verify Email</string>
    <string name="verify">Verify</string>
    <string name="disconnect">Disconnect</string>
    <string name="loading">Loading…</string>
    <string name="signed_in">Signed In</string>

    <string name="start_phone_auth">Start</string>
    <string name="verify_phone_auth">Verify</string>
    <string name="resend_phone_auth">Resend Code</string>
    <string name="hint_phone_number">Phone Number</string>
    <string name="hint_verification_code">Verification Code</string>
    <string name="status_code_sent">Code Sent</string>
    <string name="status_verification_failed">Verification failed</string>
    <string name="status_verification_succeeded">Verification succeeded</string>

    <string name="listcity">ListCity</string>
    <string name="listarea">ListArea</string>
    <string name="area">Area</string>
    <string name="list_state">ListState</string>

    <string name="place_first_select_country">Place First Select Country </string>
    <string name="place_first_select_state">Place First Select State </string>
    <string name="place_first_select_city">Place First Select City </string>
    <string name="select_homeType">Select HomeType </string>
    <string name="select_state">Select State </string>
    <string name="select_action">Select Action </string>
    <string name="select_gallery">Select photo from gallery </string>
    <string name="select_camera"> Capture photo from camera </string>
    <string name="complete_action_using">Complete action using </string>
    <string name="empty">Cannot be empty.</string>
    <string name="invalid">Invalid phone number.</string>
    <string name="invalid_code">Invalid code.</string>
    <string name="monthly_payment">monthlyPayment</string>
    <string name="down_payment">downPayment</string>
    <string name="price">Price</string>
    <string name="room">Rooms</string>
    <string name="meter">Space</string>
    <string name="monthly">Monthly</string>
    <string name="yearly">Yearly</string>
    <string name="add_sale">Add Sale </string>
    <string name="add_rent">Add Rent </string>
    <string name="list_home">My Real Estate</string>
    <string name="share_app">ShareAPP </string>
    <string name="about">About </string>
    <string name="exit">Exit </string>
    <string name="change_language">ChangeLanguage </string>
    <string name="list_country">ListCountry</string>
    <string name="state">State</string>

    <string name="description">Description</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="profile">Profile</string>
    <string name="update">Update</string>


    <!--    not translate-->

    <string name="english">English</string>
    <string name="arabic">عربى</string>
    <string name="kurdish">Kurdî</string>

    <string name="text_login"> To add a property, create an account ?</string>

    <string name="currency"> (ُ$ or ع.د or €...)</string>
    <string name="phon_nubmer_for_call">Phon Nubmer For Call</string>

    <string name="result_search">Result Search</string>
    <string name="add_new_sale">Add New Sale</string>
    <string name="add_new_rent">Add New Rent</string>


    <string name="about_des"> Outn
Definition of the application
The application aims to make the sale and rental of real estate very easy, and brings the distances closer and gives all parties a golden opportunity to communicate no matter how far away.
We meant to designate the application as (outn), in the audio sense of the word, and it includes the outside and the inside, meaning that everyone can get acquainted with the real estate offered inside and outside the city as well as in any country in the world and conduct sales, purchases and rentals with ease and smoothness.
The application gives individuals the opportunity to launch a platform for selling and renting real estate without the need for traditional offices and companies, just to create an account within the application it becomes possible to offer real estate for sale and rent, and communicate easily with customers. It also shows the brand name chosen by the person next to outn, and can be published and promoted through social media.
The application opens doors for customers to choose real estate according to the specifications that they wish.
Through the application, pictures of real estate, its specifications, prices and contact with its owners are displayed.
The property can be searched for in a specific country or city and according to the required specifications.
The application provides the easiest way to spread information about the property among people to promote it and introduce it.
Outn App is the first global platform that allows individuals to launch their real estate companies without restrictions. And the name he chooses for his office or company appears immediately in the application, for example outn john.
</string>
    <string name="business_name">BusinessName</string>

    <string name="new_version_available">There is a newer version of outn application available, click UPDATE to upgrade now?</string>
    <string name="warning">Warning</string>

    <string name="help_text_one">For more details, you can contact us via WhatsApp</string>
    <string name="help_text_two">Or via email</string>
    <string name="contact_us">Contact us</string>
    <string name="search">search for real estate by country and city</string>
    <string name="search_main">search</string>

    <string name="contact_dec">Hello .. To publish your  real estate - Send WhatsApp
              Name, phone number, country and city, real estate information and pictures </string>

    <string name="add_image_About_neighborhood"> Add the nearest point</string>

    <string name="about_neighborhood">About the neighborhood (optional)</string>
    <string name="des_neighborhood"> About the neighborhood </string>

    <string name="main_street"> Main Street </string>
    <string name="sport_club"> Sport Club </string>
    <string name="nearest_school"> Nearest School </string>
    <string name="nearst_markets">Nearst Markets</string>
    <string name="Activity">Activity</string>


    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="comment">Comment</string>
    <string name="news">News</string>
    <string name="list_news">List News</string>
    <string name="title">Title</string>
    <string name="outn_platform">Outn Platform</string>
    <string name="partners">Partners</string>
    <string name="views">Views</string>
    <string name="opinion">add opinion</string>
    <string name="your_vision_and_our_vision"> our vision</string>
    <string name="add_real_estate">add real estate </string>
    <string name="send_to">send to:</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="success_request">request is success</string>
    <string name="success_error">Your request has encountered an error</string>
    <string name="field_cannot_empty">This field cannot be empty</string>
    <string name="lenght_canot_less_10">The length can not be less than 10</string>
    <string name="select_an_photo_for_your_opinion">please select an photo for your opinion</string>
    <string name="select_multiple_image">Select multiple images from the gallery</string>
    <string name="select_more_than_one">Please select more than one image</string>
    <string name="turkish">Türkçesi</string>
    <string name="about_the_company">About the company</string>


</resources>
