<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:text="@string/opinion"
            android:textColor="@color/black"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/img_real_state"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginStart="50dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="50dp"
            android:scaleType="centerInside"
            android:src="@drawable/camera" />

        <EditText
            android:id="@+id/ed_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:hint="@string/title" />

        <EditText
            android:id="@+id/ed_body"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:hint="@string/description" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="10dp"
            android:orientation="horizontal">

            <Button

                android:id="@+id/yesBtn"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:background="@drawable/background_rent"
                android:text="@string/save"
                android:textColor="@color/white" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <Button
                android:id="@+id/noBtn"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_gravity="end"
                android:layout_marginBottom="15dp"
                android:background="@drawable/background_sale"
                android:text="@string/exit"
                android:textColor="@color/white" />

        </LinearLayout>

    </LinearLayout>

</androidx.core.widget.NestedScrollView>