<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/btnBack"
            android:layout_width="40dp"
            android:layout_height="?attr/actionBarSize"
            android:layout_gravity="center_vertical"
            android:background="?attr/actionBarItemBackground"
            android:scaleType="centerInside"
            android:src="@drawable/black" />

        <TextView
            android:id="@+id/txtTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/change_language"
            android:textColor="@android:color/black"
            android:textSize="20dp" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <View
            android:layout_width="match_parent"
            android:layout_height="1sp"
            android:background="@color/grey_300"
            android:gravity="bottom" />

        <LinearLayout
            android:id="@+id/lnrEnglish"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="5sp"
            android:paddingTop="5sp">

            <RadioButton
                android:id="@+id/radioEnglish"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingStart="5dp"
                android:text="@string/english"
                android:textAlignment="viewStart"
                android:theme="@style/AppTheme"
                android:visibility="visible" />


        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1sp"
            android:layout_marginTop="5sp"
            android:background="@color/grey_300"
            android:gravity="bottom" />

        <LinearLayout
            android:id="@+id/lnrArabic"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="5sp"
            android:paddingTop="5sp">

            <RadioButton
                android:id="@+id/radioArabic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingStart="5dp"
                android:text="@string/arabic"
                android:textAlignment="viewStart"
                android:theme="@style/AppTheme"
                android:visibility="visible" />

        </LinearLayout>


        <View
            android:layout_width="match_parent"
            android:layout_height="1sp"
            android:layout_marginTop="5sp"
            android:background="@color/grey_300"
            android:gravity="bottom" />

        <LinearLayout
            android:id="@+id/lnrKurdish"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="5sp"
            android:paddingTop="5sp">

            <RadioButton
                android:id="@+id/radioKurdish"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="5sp"
                android:text="@string/kurdish"
                android:theme="@style/AppTheme"
                android:textAlignment="viewStart"
                android:visibility="visible" />

        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1sp"
            android:layout_marginTop="5sp"
            android:background="@color/grey_300"
            android:gravity="bottom" />
        <LinearLayout
            android:id="@+id/lnrTurkish"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="5sp"
            android:paddingTop="5sp">

            <RadioButton
                android:id="@+id/radioTurkish"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="5sp"
                android:text="@string/turkish"
                android:theme="@style/AppTheme"
                android:textAlignment="viewStart"
                android:visibility="visible" />

        </LinearLayout>


        <View
            android:layout_width="match_parent"
            android:layout_height="1sp"
            android:layout_marginTop="5sp"
            android:background="@color/grey_300"
            android:gravity="bottom" />


    </LinearLayout>

</LinearLayout>