<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:fitsSystemWindows="true"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/btnBack"
                android:layout_width="40dp"
                android:layout_height="?attr/actionBarSize"
                android:layout_marginStart="5dp"
                android:scaleType="centerInside"
                android:src="@drawable/black" />

            <TextView
                android:id="@+id/txtTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center|center_horizontal"
                android:layout_marginStart="80dp"
                android:text="@string/contact_us"
                android:textColor="@android:color/background_dark"
                android:textSize="20dp" />

        </LinearLayout>

        <TextView
            android:id="@+id/lb_text_one"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="20dp"
            android:text="@string/contact_dec"
            android:textColor="@android:color/background_dark"
            android:textSize="17dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/lb_phone_Number_whatsapp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="20dp"
            android:text="+447732830221"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="17dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/lb_text_two"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="20dp"
            android:text="@string/help_text_two"
            android:textColor="@android:color/background_dark"
            android:textSize="17dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/lb_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="20dp"
            android:text="Info@outn.net"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="17dp"
            android:textStyle="bold" />

    </LinearLayout>

</LinearLayout>